--- a/kubernetes/role.yaml
+++ b/kubernetes/role.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: secret-service
+  name: k8s-secrets-service
   namespace: development
 rules:
 - apiGroups:
